# esp32-macropad

./: README.md  sdkconfig  sdkconfig.defaults.esp32s3  sdkconfig.old
main/: CMakeLists.txt  button.c  dip.c  esp_hid_device.c  esp_hid_device_main.c  esp_hid_gap.c  esp_hid_gap.h  global.c  global.h  main.c  util.c  util.h
